<resources>
    <string name="app_name">Sudoku Master</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="solve">Solve!</string>
    <string name="clean">Clean</string>
    <string name="error">Something went wrong. Check your sudoku puzzle and try again.</string>
    <string name="gridError">Something went wrong. Try to take picture again.</string>
    <string name="title_activity_settings">Sudoku Mastery</string>
    <string name="ok">OK!</string>
    <string name="check">Is it your puzzle?</string>
    <string name="wait">Please wait. It can take a few minutes</string>
</resources>
