<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.itschool.itprogect.sudoku_master.MainActivity">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="click"
        android:elevation="4dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/button2"
        android:onClick="cameraClick"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solve"
        android:id="@+id/button3"
        android:onClick="solve"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/progressBar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button3"
        android:id="@+id/back"
        android:alpha="0.8"
        android:background="@color/colorClear">

        <com.itschool.itprogect.sudoku_master.Grid
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clean"
        android:id="@+id/button5"
        android:onClick="clean"
        android:background="@color/colorPrimary"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/progressBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait"
        android:id="@+id/textView2"
        android:layout_above="@+id/progressBar"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
